# testcase-viewer

./: .editorconfig  .env.example  .eslintrc.json  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Makefile  README.md  README.txt  REQUIREMENTS.md  comment_report.md  package.json  pyproject.toml  requirements-dev.txt  security_report.md  start.bat  start.command  testcase_viewer.py
.claude/agents/: bug-fixer.md  code-security.md  comment-checker.md  product-manager.md  quality-manager.md  tester.md
.codebuddy/skills/frontend-style-guide/: SKILL.md
.codebuddy/skills/frontend-style-guide/assets/: FRONTEND_STYLE_GUIDE.template.md
.github/: pull_request_template.md
.husky/: pre-commit
.workbuddy/memory/: 2026-07-08.md  MEMORY.md
.workbuddy/skills/code-standards/: SKILL.md
.workbuddy/skills/functional-use-cases/: _skillhub_meta.json
.workbuddy/skills/prd/: _skillhub_meta.json
.workbuddy/skills/prd-generator/: _skillhub_meta.json
.workbuddy/skills/requirement-to-prd/: SKILL.md
.workbuddy/skills/self-testing/: SKILL.md
app/: __init__.py  config.py
app/api/: __init__.py
app/models/: __init__.py  testcase.py
app/services/: __init__.py  in_memory_repo.py  repository.py
app/static/css/: design-tokens.css  style.css
app/static/js/: app.js
app/templates/: index.html
docs/: PRD-汇总统计.md  PRD-汇总统计升级-v2.x.md  design-migration-plan.md  design-preview.html  design-system.md
docs/reports/: test_report.md
testcases/: ROS多货架适配_测试用例.xlsx  _active.xlsx  _memory.json  货架偏移容差测试用例.xlsx  货架偏移容量测试用例.xlsx
tests/: __init__.py  conftest.py  test_in_memory_repo.py  test_testcase_viewer.py
