[project]
name = "testcase-viewer"
version = "1.3.4"
description = "测试用例显示工具 - 读取 Excel 测试用例并在网页上查看/执行/搜索/汇总"
requires-python = ">=3.8"

# 运行时依赖（与 requirements.txt 保持一致）
dependencies = [
    "flask>=2.3.0",
    "openpyxl>=3.1.0",
]

# 开发依赖（与 requirements-dev.txt 保持一致）
[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "coverage>=7.0",
    "flake8>=6.0",
    "black>=23.0",
    "isort>=5.0",
    "mypy>=1.0",
]

# ---- 工具配置 ----

[tool.black]
line-length = 100
target-version = ['py38']

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
testpaths = ['tests']
addopts = '-v --tb=short --cov=testcase_viewer --cov-report=term'

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # 渐进式：当前允许未注解函数，未来收紧

# app/ 目录强制类型检查（阶段2 新增代码有完整注解）
[[tool.mypy.overrides]]
module = "app.*"
disallow_untyped_defs = true
